﻿###2.0 CompletelyOptional Update#!#20220330#!#
Note: o(planned) v(finished)
OpTab & MenuTab rewrite
o Rewrote ConfigMachine to BepInEx Plugin, removed support for Partiality Mods
o Use only BepInEx.Configuration for saving configs
 o So OI won't get even called until MOD CONFIG screen is loaded (As BepInEx will load the settings instead)
o Clean up OptionInterface so only things the modders need are there
 o UIelements now support Controller and Keyboard control
  o Grab/Throw to focus/unfocus, joystick in 4 direction from center of element to other element
o Made In-game UI editor (Ctrl+Shift+E... I'll think of better hotkey)
 o OUI.txt lua(or smth that allows storing instruction) file for generating OUIs
o TranslationAPI now allow adding translation to existing mods that uses this API (maybe)
###1.5.5#!#20220130#!#
- Reworked OptionInterface's Data API (by Henpemaz)
 + This WILL BREAK backward compatibility with mods that use older progData
 + There are now four types of data in OptionInterface
  x data: Not bound to the game or saveslot; Modders can set this to anything anytime, but have to call LoadData and SaveData manually
  x Progression Data: Requires hasProgData to be true to use
   * saveData: Bound to SaveState (current slugcat)
   * persData: Bound to DeathPersistentData (current slugcat); Stays persistent regardless of death or quit
   * miscData: Bound to ProgressionData (current saveslot); Stays persistent regardless of death/quit or slugcat change
- Added Chinese translation support using CommunicaitonModule
- OpColorPicker's HEX edit mode now activates when you double-click only where HEX is located
- Fixed an issue with initial launch when ModConfigs folder doesn't exist, thanks to Henpemaz
- Fixed an issue which OpSlider's description is not using translation with a certain ctor
###1.5.4#!#20210704#!#
1.5.4.4
- Fixed OpResourceSelector and OpResourceList breaking with the last fix
1.5.4.3
- ListItem now has a property called displayName (by PJB)