@@ -1,12 +1,15 @@
 ﻿###2.0 CompletelyOptional Update#!#20220330#!#
 Note: o(planned) v(finished)
-OpTab & MenuTab rewrite
+MenuTab rewrite
+DyeableRect, OpRect, OpLabel rewrite
 o Rewrote ConfigMachine to BepInEx Plugin, removed support for Partiality Mods
 o Use only BepInEx.Configuration for saving configs
  o So OI won't get even called until MOD CONFIG screen is loaded (As BepInEx will load the settings instead)
 o Clean up OptionInterface so only things the modders need are there
  o UIelements now support Controller and Keyboard control
   o Grab/Throw to focus/unfocus, joystick in 4 direction from center of element to other element
+ o Removed usages of MenuObject in UIelements
+  o This allows more controlled sorting
 o Made In-game UI editor (Ctrl+Shift+E... I'll think of better hotkey)
  o OUI.txt lua(or smth that allows storing instruction) file for generating OUIs
 o TranslationAPI now allow adding translation to existing mods that uses this API (maybe)
